--- a/src/main/resources/com/example/onlinestore/cart-form.fxml
+++ b/src/main/resources/com/example/onlinestore/cart-form.fxml
@@ -1,29 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-
-<AnchorPane prefHeight="453.0" prefWidth="713.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.onlinestore.CartController">
+<AnchorPane prefHeight="453.0" prefWidth="713.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.onlinestore.CartController">
    <children>
       <ImageView fitHeight="476.0" fitWidth="733.0" layoutX="-1.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../homepage.jpg" />
          </image>
       </ImageView>
-      <Button layoutX="28.0" layoutY="24.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="78.0" text="Products" />
+      <Button fx:id="ProductsButtonFromCart" layoutX="28.0" layoutY="24.0" mnemonicParsing="false" onAction="#onProductsButtonFromCartClick" prefHeight="33.0" prefWidth="78.0" text="Products" />
       <Label layoutX="322.0" layoutY="15.0" text="Cart" textFill="#4b1162">
          <font>
             <Font name="Bodoni Bd BT Bold" size="36.0" />
          </font>
       </Label>
-      <Button layoutX="536.0" layoutY="372.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="129.0" text="Place order" />
+      <Button fx:id="PlaceorderButtonFromCart" layoutX="536.0" layoutY="372.0" mnemonicParsing="false" onAction="#onPlaceorderButtonFromCartClick" prefHeight="44.0" prefWidth="129.0" text="Place order" />
       <TextArea layoutX="29.0" layoutY="100.0" prefHeight="260.0" prefWidth="637.0" />
       <TextField layoutX="113.0" layoutY="381.0" prefHeight="44.0" prefWidth="69.0" />
       <Label layoutX="32.0" layoutY="381.0" prefHeight="25.0" prefWidth="69.0" text="Total price:" textFill="#4b1162">
