--- a/src/main/resources/com/example/onlinestore/placeorder-form.fxml
+++ b/src/main/resources/com/example/onlinestore/placeorder-form.fxml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.onlinestore.PlaceOrderController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.onlinestore.PlaceOrderController">
    <children>
       <ImageView fitHeight="496.0" fitWidth="748.0" layoutX="-6.0" layoutY="-9.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -22,7 +18,7 @@
             <Font name="Bodoni Bd BT Bold" size="36.0" />
          </font>
       </Label>
-      <Button layoutX="31.0" layoutY="31.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="74.0" text="Cart" />
+      <Button fx:id="CartButtonFromPlaceOrder" layoutX="31.0" layoutY="31.0" mnemonicParsing="false"  prefHeight="25.0" prefWidth="74.0" text="Cart" onAction="#onCartButtonFromPlaceOrderClick"/>
       <Button layoutX="532.0" layoutY="345.0" mnemonicParsing="false" prefHeight="57.0" prefWidth="117.0" text="Place order" />
       <Label layoutX="184.0" layoutY="102.0" text="Please, provide us your delivery details!" textFill="#770404">
          <font>
