--- a/src/main/resources/login-form.fxml
+++ b/src/main/resources/login-form.fxml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="loginform" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="432.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.onlinestore.LoginController">
+<AnchorPane fx:id="loginform" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="432.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.onlinestore.controllers.LoginController"  >
    <children>
       <ImageView fitHeight="537.0" fitWidth="760.0" layoutX="-316.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true" rotate="-90.0">
          <image>
-            <Image url="@../../../login_img.jpg" />
+            <Image url="@login_img.jpg" />
          </image>
       </ImageView>
       <Label fx:id="signin" layoutX="477.0" layoutY="87.0" text="SIGN IN" textFill="#5b246b">
@@ -29,6 +34,6 @@
          </font></Label>
       <PasswordField fx:id="passwordfield" layoutX="448.0" layoutY="203.0" />
       <TextField fx:id="usernamefield" layoutX="448.0" layoutY="161.0" />
-      <Label fx:id="registration" layoutX="509.0" layoutY="346.0" text="Label" />
+      <Label fx:id="registration" layoutX="447.0" layoutY="337.0" />
    </children>
 </AnchorPane>
