--- a/src/main/resources/placeorder-form.fxml
+++ b/src/main/resources/placeorder-form.fxml
@@ -5,11 +5,11 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.onlinestore.PlaceOrderController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.onlinestore.controllers.PlaceOrderController">
    <children>
       <ImageView fitHeight="496.0" fitWidth="748.0" layoutX="-6.0" layoutY="-9.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../homepage.jpg" />
+            <Image url="@homepage.jpg" />
          </image>
       </ImageView>
       <TextField layoutX="68.0" layoutY="256.0" prefHeight="25.0" prefWidth="128.0" />
