--- a/src/main/resources/products-form.fxml
+++ b/src/main/resources/products-form.fxml
@@ -252,6 +252,6 @@
             <Font name="Bodoni Bd BT Bold" size="36.0" />
          </font>
       </Label>
-      <Button fx:id="ManageProductsButtonFromProducts" layoutX="501.0" layoutY="13.0" mnemonicParsing="false" onAction="#OnManageProductsButtonClick" text="Manage Products" />
+      <Button fx:id="ManageProductsButton" layoutX="501.0" layoutY="13.0" mnemonicParsing="false" onAction="#OnManageProductsButtonClick" text="Manage Products" />
    </children>
 </AnchorPane>
