AFOMS-3 View products done(for admin & client) + clear fields after register + problems fixed in view products

--- a/src/main/resources/manageproducts-form.fxml
+++ b/src/main/resources/manageproducts-form.fxml
@@ -1,30 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollBar?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.effect.DropShadow?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.paint.Color?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.text.*?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="420.0" prefWidth="719.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.onlinestore.controllers.ManageProductsController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="420.0" prefWidth="719.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.onlinestore.controllers.ManageProductsController">
    <ImageView fitHeight="487.0" fitWidth="769.0" pickOnBounds="true" preserveRatio="true">
       <image>
          <Image url="@homepage.jpg" />
       </image>
    </ImageView>
 
-   <AnchorPane prefHeight="400.0" prefWidth="670.0">
+   <AnchorPane fx:id="manageproductsform" prefHeight="400.0" prefWidth="670.0">
       <Label layoutX="293.0" layoutY="20.0" prefHeight="37.0" prefWidth="163.0" text="Manage Products" textFill="#252191">
          <font>
             <Font size="20.0" />
