--- a/src/main/resources/products-form.fxml
+++ b/src/main/resources/products-form.fxml
@@ -1,32 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="474.0" prefWidth="713.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.onlinestore.controllers.ProductsController">
+<AnchorPane prefHeight="474.0" prefWidth="713.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.onlinestore.controllers.ProductsController">
    <children>
       <ImageView fitHeight="474.0" fitWidth="833.0" opacity="0.7" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@homepage.jpg" />
          </image></ImageView>
-      <ScrollPane layoutX="12.0" layoutY="59.0" prefHeight="370.0" prefWidth="680.0">
-        <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="370.0" prefWidth="679.0">
-               <children>
-                  <GridPane fx:id="productsMenu" layoutX="14.0" layoutY="14.0" prefHeight="26.0" prefWidth="94.0">
-                    <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                    </columnConstraints>
-                  </GridPane>
-               </children></AnchorPane>
-        </content>
+      <ScrollPane fx:id="scrollPane" layoutX="14.0" layoutY="71.0" prefHeight="361.0" prefWidth="676.0">
+         <content>
+            <GridPane fx:id="productsMenu" prefHeight="359.0" prefWidth="672.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+            </GridPane>
+         </content>
       </ScrollPane>
       <Button fx:id="HomeButtonFromProducts" layoutX="14.0" layoutY="13.0" mnemonicParsing="false" onAction="#onHomeButtonFromProductsClick" prefHeight="25.0" prefWidth="69.0" text="Home" />
       <Button fx:id="CartButtonFromProducts" layoutX="622.0" layoutY="13.0" mnemonicParsing="false" onAction="#onCartButtonFromProductsClick" prefHeight="25.0" prefWidth="69.0" text="Cart" />
