Logout - in homepage

--- a/src/main/resources/homepage-form.fxml
+++ b/src/main/resources/homepage-form.fxml
@@ -25,7 +25,7 @@
             <Font name="Perpetua" size="20.0" />
          </font>
       </Text>
-      <Button fx:id="OurProductsButton" layoutX="276.0" layoutY="281.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="175.0" text="Our Products" onAction="#onOurProductsButtonClick">
+      <Button fx:id="OurProductsButton" layoutX="276.0" layoutY="281.0" mnemonicParsing="false" onAction="#onOurProductsButtonClick" prefHeight="94.0" prefWidth="175.0" text="Our Products">
          <font>
             <Font name="Arial Black" size="14.0" />
          </font></Button>
@@ -39,5 +39,6 @@
             <Image url="@mascara.jpg" />
          </image>
       </ImageView>
+      <Button fx:id="logoutButton" layoutX="14.0" layoutY="25.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="79.0" text="Logout" onAction="#onLogoutButtonClick"/>
    </children>
 </AnchorPane>
