--- a/src/main/resources/cart-form.fxml
+++ b/src/main/resources/cart-form.fxml
@@ -1,17 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="453.0" prefWidth="713.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.onlinestore.controllers.CartController">
+<AnchorPane prefHeight="453.0" prefWidth="713.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.onlinestore.controllers.CartController">
    <children>
-      <ImageView fitHeight="476.0" fitWidth="733.0" layoutX="-1.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="totalPrice" fitHeight="476.0" fitWidth="733.0" layoutX="-1.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@homepage.jpg" />
          </image>
@@ -23,12 +19,22 @@
          </font>
       </Label>
       <Button fx:id="PlaceorderButtonFromCart" layoutX="536.0" layoutY="372.0" mnemonicParsing="false" onAction="#onPlaceorderButtonFromCartClick" prefHeight="44.0" prefWidth="129.0" text="Place order" />
-      <TextField layoutX="113.0" layoutY="381.0" prefHeight="44.0" prefWidth="69.0" />
-      <Label layoutX="32.0" layoutY="381.0" prefHeight="25.0" prefWidth="69.0" text="Total price:" textFill="#4b1162">
+      <Label layoutX="28.0" layoutY="372.0" prefHeight="27.0" prefWidth="142.0" text="Total price:" textFill="#4b1162">
          <font>
-            <Font name="Arial" size="14.0" />
+            <Font name="Bodoni Bd BT Bold" size="27.0" />
          </font>
       </Label>
       <Text layoutX="30.0" layoutY="105.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="643.4700012207031" />
+      <TableView fx:id="CartTableView" layoutX="29.0" layoutY="89.0" prefHeight="265.0" prefWidth="636.0">
+        <columns>
+          <TableColumn fx:id="Product_col" prefWidth="507.3333492279053" text="Product" />
+          <TableColumn fx:id="Price_col" minWidth="0.0" prefWidth="128.0" text="Price" />
+        </columns>
+      </TableView>
+      <Label fx:id="total_Price" layoutX="176.0" layoutY="367.0" prefHeight="44.0" prefWidth="69.0" text="Label" textFill="#3e0648">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
